# daikoku

./: .env  Cargo.toml  Makefile  README.md
configuration/: config.base.yml
migrations/: 20230404040534_wallet.sql  20230414054501_account_balance.sql  20230416062659_wallet_alias.sql
scripts/: database.sh
src/: alias.rs  error.rs  lib.rs  main.rs  settings.rs  storage.rs
src/models/: account.rs  mod.rs  transaction.rs  types.rs  wallet.rs
src/ui/: mod.rs  render_account.rs  render_init.rs  render_transaction.rs  render_wallet.rs
