[package]
name = "daikoku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
config = "0.13.3"
num-traits = "0.2.15"
secrecy = { version = "0.8.0", features = [ "serde" ] }
serde = { version = "1.0.159", features = [ "derive" ] }
sqlx = { version = "0.6.3", default-features=false, features=["runtime-tokio-rustls", "macros", "mysql", "chrono", "migrate", "bigdecimal", "offline"] }
tokio = { version="1.27.0", features=["macros", "rt-multi-thread"] }
