[package]
name = "daikoku"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "daikoku"

[dependencies]
aes-gcm = "0.10.1"
bigdecimal = { version = "0.3.0", features = [ "serde" ] }
chrono = { version = "0.4.24", features = [ "serde" ] }
config = "0.13.3"
eframe = "0.21.3"
egui = "0.21.0"
egui_extras = { version = "0.21.0", features = [ "chrono", "datepicker" ] }
home = "0.5.4"
num-traits = "0.2.15"
ron = "0.8.0"
secrecy = { version = "0.8.0", features = [ "serde" ] }
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread" ] }
uuid = { version = "1.3.1", features = [ "serde", "v4" ] }
