[package]
name = "daikoku"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "daikoku"

[dependencies]
aes-gcm = "0.10.1"
bigdecimal = { version = "0.3.0", features = [ "serde" ] }
chrono = { version = "0.4.24", features = [ "serde" ] }
config = "0.13.3"
home = "0.5.4"
num-traits = "0.2.15"
ron = "0.8.0"
secrecy = { version = "0.8.0", features = [ "serde" ] }
serde = { version = "1.0.159", features = ["derive"] }
thiserror = "1.0.40"
uuid = { version = "1.3.1", features = [ "serde", "v4" ] }
